compiler/testData/diagnostics/tests/secondaryConstructors/resolvePropertyInitializerWithoutPrimary.kt
class A {
    konst prop: Int = <!TYPE_MISMATCH!>""<!>
    constructor()
}
